<resources>
    <string name="app_name">Humiture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--登录-->
    <string name="login_name">请输入用户账号</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_other">本机直接登录</string>
    <string name="login">登录</string>
    <string name="login_password_forget">忘记密码</string>
    <string name="login_other_title">其他快捷登录</string>
    <!--注册-->
    <string name="register_name">用户名</string>
    <string name="register_pwd">密码</string>
    <string name="register_pwd_again">确认密码</string>
    <string name="register_rgs">注册</string>
    <string name="register_now">立即注册</string>
    <string name="register_title">账号注册</string>

    <!--首页-->
    <string name="index_data">环境数据</string>
    <string name="index_trend">趋势图</string>
    <string name="index_more">更多</string>
    <string name="index_temp">温度</string>
    <string name="index_hum">湿度</string>
    <string name="index_pm">PM2.5</string>
    <string name="index_tv">TVOC</string>
    <string name="index_formaldehyde">甲醛</string>
    <string name="index_colony">菌落</string>
    <string name="index_eco">ECO2</string>
    <string name="index_harmful">有害气体</string>
    <string name="index_warehouse">库房选择</string>
    <string name="index_chose_time">自定义</string>

    <!--操作-->
    <string name="operate_temp">库房温度</string>
    <string name="operate_hum">库房湿度</string>
    <string name="operate_colony">库房菌落</string>
    <string name="operate_pm2">库房PM2.5</string>
    <string name="operate_formaldehyde">库房甲醛</string>
    <string name="operate_tvoc">库房TVOC</string>
    <string name="operate_harmful">库房有害气体</string>
    <string name="operate_eco2">库房Eco2</string>
    <string name="operate_state">暂无设备运行</string>
    <string name="operate_title">空调</string>
    <string name="operate_number">设备序号</string>
    <string name="operate_equipment">设备操控</string>
    <string name="operate_hm">手动</string>
    <string name="operate_sm">自动</string>
    <string name="operate_refrigeration">制冷</string>
    <string name="operate_heating">制热</string>
    <string name="operate_ventilate">通风</string>
    <string name="operate_stop">停止</string>
    <string name="operate_humidification">加湿</string>
    <string name="operate_negativeion">负离子</string>
    <string name="operate_hm_negativeion">加湿负离子</string>
    <string name="operate_de_negativeion">除湿负离子</string>
    <string name="operate_dehumidification">除湿</string>
    <string name="operate_disinfection">消毒</string>
    <string name="operate_Purification">净化</string>
    <string name="operate_pm">PM2.5</string>

    <!--通用-->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="data_yesterday">昨日数据</string>
    <string name="data_today">今日数据</string>
    <string name="dw_temp">℃</string>
    <string name="dw_hum">%RH</string>
    <string name="dw_pm2">ug/m³</string>
    <string name="dw_tvoc">m³</string>
    <string name="dw_colony">mg/m³</string>
    <string name="dw_formaldehyde">L</string>
    <string name="dw_eco2">mL</string>
    <string name="dw_harmful">mL</string>
    <string name="no_data">暂无数据</string>
    <string name="network_error">网络异常</string>
    <string name="refresh">刷新</string>

    <!--消息-->
    <string name="news_title">我的消息</string>

    <!--语音-->
    <string name="voice_title">请问有什么可以帮助您？</string>
    <!--统计-->
    <string name="stat_choose_year">按年选择</string>
    <string name="stat_choose_month">按月选择</string>
    <string name="stat_choose_day">按日选择</string>
    <string name="stat_choose_title">选择时间</string>
    <string name="stat_choose_ok">完成</string>
    <string name="stat_play_title">视频监控</string>
    <string name="stat_zh_title">综合统计</string>
    <string name="stat_bj_title">报警统计</string>

    <!--统计报警-->
    <string name="alarm_title">报警统计</string>
    <string name="alarm_pm_title">PM2.5</string>
    <string name="alarm_pm_value">30μg/m³</string>
    <string name="alarm_pm_state">超高</string>
    <string name="alarm_pm_day">今天</string>
    <string name="alarm_pm_time">11:47</string>
    <string name="alarm_search">请输入关键字</string>
    <string name="alarm_search_sort">分类</string>
    <string name="alarm_search_search">搜索</string>

    <string name="sort_all">全部</string>
    <string name="sort_environment">全部环境</string>
    <string name="sort_wendu">温度</string>
    <string name="sort_shidu">湿度</string>
    <string name="sort_pm">PM2.5</string>
    <string name="sort_tvoc">TVOC</string>
    <string name="sort_junluo">菌落</string>
    <string name="sort_jiaquan">甲醛</string>
    <string name="sort_eoc2">EOC2</string>
    <string name="sort_gas">有害气体</string>
    <string name="sort_dev_all">全部设备</string>
    <string name="sort_air">空调</string>
    <string name="sort_hengshi">恒湿机</string>
    <string name="sort_xiaodu">消毒机</string>
    <string name="sort_chushi">除湿机</string>
    <string name="sort_jiashi">加湿机</string>


    <!--我的-->
    <string name="mine_info_title">我的消息</string>
    <string name="mine_set_title">设置</string>
    <string name="mine_set_safe_title">账户与安全</string>
    <string name="mine_safe_password_title">修改密码</string>
    <string name="mine_safe_password_btn">重置</string>
    <string name="mine_kufang_set">库房环境</string>
    <string name="mine_cache">清理缓存</string>
    <string name="smart_assistant_title">智能小助手</string>
    <string name="smart_assistant_working">设置时间内，打开APP,会自动改为上班模式</string>
    <string name="smart_assistant_workout">设置时间内，所有设备会改为自动模式</string>
    <string name="smart_assistant_holiday">设置时间内，会进行托管模式</string>

    <!--视频监控-->
    <string name="player_operate">视频操控</string>
    <string name="player_folder">文件夹</string>
    <string name="player_screenshot">抓图</string>
    <string name="player_video">录像</string>

</resources>
