<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/index_title"
    tools:context=".ui.activity.NewsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@color/index_title">

        <TextView
            android:id="@+id/operate_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_18"
            android:textColor="@color/white"
            android:text="@string/operate_title"/>

        <ImageView
            android:id="@+id/air_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_chevron_left"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/operate_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

            <com.example.humiture.ui.view.Gallery.BannerLayout
                android:id="@+id/air_banner"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                app:showIndicator="false"
                app:autoPlaying="false"
                app:centerScale="1.2"
                app:itemSpace="0"
                app:moveSpeed="1">
            </com.example.humiture.ui.view.Gallery.BannerLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_temperature"/>
            <TextView
                android:id="@+id/air_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:textColor="@color/black"
                android:text="@string/index_temp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/dw_temp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/operate_equipment"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_30"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_op_sm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/auto_normal" />

                <TextView
                    android:id="@+id/tv_op_sm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate_sm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_op_hm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/manual_click" />

                <TextView
                    android:id="@+id/tv_op_hm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate_hm"
                    android:textColor="@color/operate_click" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_op_refrigeration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/refrigeration_click" />

                <TextView
                    android:id="@+id/tv_op_refrigeration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate_refrigeration"
                    android:textColor="@color/operate_click" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_op_heating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/refrigeration_normal" />

                <TextView
                    android:id="@+id/tv_op_heating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate_heating" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_op_ventilate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ventilate_normal" />

                <TextView
                    android:id="@+id/tv_op_ventilate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate_ventilate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_op_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/stop_normal" />

                <TextView
                    android:id="@+id/tv_op_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operate_stop"
                    android:textColor="@color/operate_normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>