<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_op_ch_humidification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/humidification_normal" />

            <TextView
                android:id="@+id/tv_op_ch_humidification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/operate_humidification" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_op_ch_dehumidification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/dehumidification_normal" />

            <TextView
                android:id="@+id/tv_op_ch_dehumidification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/operate_dehumidification" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_op_ch_hm_negativeion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/anion_normal" />

            <TextView
                android:id="@+id/tv_op_ch_hm_negativeion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/operate_hm_negativeion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_op_ch_de_negativeion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/anion_normal" />

            <TextView
                android:id="@+id/tv_op_ch_de_negativeion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/operate_de_negativeion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_op_ch_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/stop_normal" />

            <TextView
                android:id="@+id/tv_op_ch_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/operate_stop"
                android:textColor="@color/operate_normal" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>