<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base"
        android:background="@color/index_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@color/index_title">

        <ImageView
            android:id="@+id/alarm_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_15"
            app:srcCompat="@mipmap/ic_chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/alarm_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffc6c8c9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alarm_sort"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:gravity="center"
            android:paddingRight="@dimen/margin_25"
            android:text="@string/alarm_search_sort"
            android:textColor="@color/alarm_sort_color"
            android:textSize="@dimen/txt_size_14" />

        <com.example.custom.CustomEditText
            android:id="@+id/alarm_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_05"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_05"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_weight="11"
            app:contents=""
            app:hintText="@string/alarm_search"
            app:isEyeShow="false"
            app:isPassword="false"
            app:is_icon_show="false" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_05"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="#ffc6c8c9" />

        <TextView
            android:id="@+id/tv_alarm_search"
            android:layout_width="53dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/alarm_search_search"
            android:textColor="@color/alarm_sort_color"
            android:textSize="@dimen/txt_size_14" />

    </LinearLayout>

    <include layout="@layout/choose_date" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/alarm_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/info_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/no_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@color/black" />
    </LinearLayout>


</LinearLayout>
